2011-09-20  Florian Holeczek <florianh@apache.org>

        * no version bump
        * modified jspwiki-checkstyle.xml to be compatible with CheckStyle 5.x
        * corrected a few things CheckStyle was nagging about

2011-09-20  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-9
        
        * moved security manager check for JSPWIKI-705 from SessionMonitor to WikiServletFilter, and 
           make it a log message instead of an exception.

2011-09-18  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-8
        
        * fixed JSPWIKI-705 (Log a clear hint to a running security manager).

2011-08-07  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-7
        
        * fixed JSPWIKI-699 (JBoss complaining about jspwiki.tld and oscache.tld).
        
2011-04-03  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-6
        
        * fixed JSPWIKI-688 (Poor performance of CreoleToJSPWikiTranslator), thanks to Jelmer Kuperus.
        
2011-01-24  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-5
        
        * Extended the list of lucene searchable file suffixes, we now do 
           ".txt", ".ini", ".xml", ".html", "htm", ".mm", ".htm", ".xhtml", ".java", ".c", ".cpp",
            ".php", ".asm", ".sh",  ".properties", ".kml", ".gpx", ".loc"

2010-12-12  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-4
        
        * JSPWIKI-671: WikiPageRenameEvent not fired during page rename.

2010-12-05 Dirk Frederickx <brushed@apache.org>

        * v2.8.5-svn-3

        * JSPWIKI-667: Fixed Scorebar issue in Google Chrome. (workaround js error)
        
        * JSPWIKI-675: Fixed Unicode support in quickEdit (javascript regexp)

        * JSPWIKI-674: Fixed support for nested tabbed sections

2010-09-30  Harry Metske <metskem@apache.org>

        * 2.8.5-svn-2
        
        * JSPWIKI-664 SpecialPage renamed, but wikipages not changed.
        Changed all references to "FindPage" into "Search" .
